5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1630_2938.log
== TEST (2019-04-02 17:12:23) 
-- CODE:
a = int(input("dis a"))
b = int(input("dis b"))
c = int(input("dis c"))

print(a)
print(b)
print(c)
-- OUTPUT:
8
10
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:12:27) 
-- CODE:
a = int(input("dis a"))
b = int(input("dis b"))
c = int(input("dis c"))

print(a)
print(b)
print(c)
-- OUTPUT:
8
10
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:13:38) 
-- CODE:
a = flout(input("dis a"))
b = flout(input("dis b"))
c = flout(input("dis c"))

print(a)
print(b)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = flout(input())
NameError: name 'flout' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:14:07) 
-- CODE:
a = (input("dis a"))
b = (input("dis b"))
c = (input("dis c"))

print(a)
print(b)
print(c)
-- OUTPUT:
8
10
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:14:46) 
-- CODE:
a = (input("dis a"))
b = (input("dis b"))
c = (input("dis c"))

print(a)
print(b)
print(c)
print(a+b+c)
-- OUTPUT:
8
10
60
81060
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:17:24) 
-- CODE:
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("dis c"))

-- OUTPUT:
8
10
60
81060
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:18:35) 
-- CODE:
a = float(input("dis a"))
b = float(input("dis b"))


-- OUTPUT:
8
10
60
81060
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:23:28) 
-- CODE:
import math
math.cos(2ab)

a = float(input("dis a"))
b = float(input("dis b"))1

c = a**2+b**2-2ab

-- ERROR:
File "XXXX", line 2
    math.cos(2ab)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:23:30) 
-- CODE:
import math
math.cos(2ab)

a = float(input("dis a"))
b = float(input("dis b"))1

c = a**2+b**2-2ab

-- ERROR:
File "XXXX", line 2
    math.cos(2ab)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:24:04) 
-- CODE:
import math
math.cos(ab)

a = float(input("dis a"))
b = float(input("dis b"))1

c = a**2+b**2-2ab

-- ERROR:
File "XXXX", line 5
    b = float(input())1
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:32:48) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))

math.radians(c)



-- ERROR:
File "XXXX", line 5
    b = float(input())1
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:33:30) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
math.radians(c)




-- ERROR:
File "XXXX", line 5
    b = float(input())1
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:36:02) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
var = math.radians(c)




-- ERROR:
File "XXXX", line 5
    b = float(input())1
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:36:56) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
var = "math.radians(c)"




-- ERROR:
File "XXXX", line 5
    b = float(input())1
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:38:28) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
math.cos = print(c)




-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:38:30) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
math.cos = print(c)




-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:45:38) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
var = math.radian(c)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = math.radian(c)
AttributeError: module 'math' has no attribute 'radian'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:46:12) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
print = math.radian(c)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = math.radian(c)
AttributeError: module 'math' has no attribute 'radian'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:47:11) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
float(math.radian(c))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    float(math.radian(c))
AttributeError: module 'math' has no attribute 'radian'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:47:35) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
var =(math.radian(c))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var =(math.radian(c))
AttributeError: module 'math' has no attribute 'radian'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:05) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
var = math.radian(c)
print(var)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = math.radian(c)
AttributeError: module 'math' has no attribute 'radian'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:26) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
var = math.radians(c)
print(var)




-- OUTPUT:
1.0471975511965976
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:51:06) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
angu = float(input("porcen c"))
var = math.radians(c)
print(a**2+b**2-2*a*b*var)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = math.radians(c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:51:40) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
angu = float(input("porcen c"))
var = math.radians(c)
print(a**2+b**2-2*a*b*var)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = math.radians(c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:52:12) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
var = math.radians(c)
print(a**2+b**2-2*a*b*var)





-- OUTPUT:
-3.551608191455614
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:53:27) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
var = math.radians(c)
print(sqrt(a**2+b**2-2*a*b*var))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(sqrt(a**2+b**2-2*a*b*var))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:54:14) 
-- CODE:
import math
a = float(input("dis a"))
b = float(input("dis b"))
c = float(input("porcen c"))
cos = math.cos(c)
var = math.radians(c)
print(sqrt(a**2+b**2-2*a*b*var))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(sqrt(a**2+b**2-2*a*b*var))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
